# btp2-network-monitor

./: .gitignore  Dockerfile  README.md  build.sh  main.py  pyproject.toml  requirements.txt  run.sh  setup.py  storage.py
btp2/: eth_rpc.py  icon_rpc.py  main.py  monitor.css  monitor.py  monitor_ui.py
btp2-monitor/: cui.py  main.py  webui.py
btp2_monitor/: cui.css  cui.py  eth_abi.py  eth_rpc.py  icon_rpc.py  main.py  monitor.py  storage.py  types.py  webui.py  webui_types.py
tests/: main_test.py  storage_test.py  types_test.py
web/: README.md  package-lock.json  package.json
web/public/: index.html  manifest.json
web/src/: index.css  index.js  utils.js
web/src/components/: EventViewer.jsx  FeeTable.jsx  Header.jsx  Icons.js  Link.jsx  Network.jsx  StatusMonitor.jsx
web/src/icons/: run.sh
