[tool.poetry]
name = "btp2-monitor"
version = "0.1.0"
description = ""
authors = ["MoonKyu Song <mksong@parametacorp.com>"]
readme = "README.md"
packages = [{include = "btp2_monitor"}]

[tool.poetry.dependencies]
python = "^3.10"
iconsdk = "2.4.5"
web3 = "6.4.0"
click = "8.1.3"
requests = "2.28.2"
textual = "0.27.0"
fastapi = "0.97.0"
uvicorn = "0.22.0"

[tool.poetry.scripts]
btp2-monitor = "btp2_monitor.main:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
